--- a/rAInboltBench.ipynb
+++ b/rAInboltBench.ipynb
@@ -453,23 +453,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<a href='/workspaces/Benchmarking-user-information-inference/updated_A01dAed.csv' target='_blank'>/workspaces/Benchmarking-user-information-inference/updated_A01dAed.csv</a><br>"
-            ],
-            "text/plain": [
-              "/workspaces/Benchmarking-user-information-inference/updated_A01dAed.csv"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "from IPython.display import FileLink\n",
         "\n",
@@ -477,7 +463,7 @@
         "file_path = '/workspaces/Benchmarking-user-information-inference/updated_A01dAed.csv'\n",
         "\n",
         "# Create a download link\n",
-        "FileLink(file_path)\n"
+        "FileLink(file_path)"
       ]
     },
     {
